k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-mood-ingress
  namespace: youtube-mood
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: youtube-mood-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtube-mood-frontend
                port:
                  number: 80
